nani_add_headers(
        ActionContextBar.hpp
        ActionControlIconQuery.hpp
        Console.hpp
        Dashboard.hpp
        Gizmo.hpp
        HUD.hpp
        InventoryWindow.hpp
        ItemWidget.hpp
        OrbDisplay.hpp
        MiniMap.hpp
        MiniMenu.hpp
        PauseWindow.hpp
        Portrait.hpp
        InventorySelector.hpp
        ResponseDialog.hpp
        StatusBar.hpp
        TextWriter.hpp
        VendorDialog.hpp
        WardrobeWidget.hpp
        Widget.hpp
        WidgetBar.hpp
)
add_subdirectory(gizmos)
