nani_add_headers(
        ActionContextBar.hpp
        ActionControlIconQuery.hpp
        BossHealth.hpp
        Dashboard.hpp
        Gizmo.hpp
        HealthBar.hpp
        InventoryWindow.hpp
        ItemWidget.hpp
        OrbDisplay.hpp
        MiniMap.hpp
        MiniMenu.hpp
        PauseWindow.hpp
        Portrait.hpp
        InventorySelector.hpp
        StatusBar.hpp
        VendorDialog.hpp
        WardrobeWidget.hpp
        Widget.hpp
        WidgetBar.hpp
)
add_subdirectory(console)
add_subdirectory(gizmos)
add_subdirectory(hud)
