nani_add_headers(
        AbilityManager.hpp
        Catalog.hpp
        Inventory.hpp
        Piggybacker.hpp
        Player.hpp
        PlayerAnimation.hpp
        PlayerAttributes.hpp
        PlayerController.hpp
        VisitHistory.hpp
        Wallet.hpp
        Wardrobe.hpp
)
add_subdirectory(abilities)
